--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "omnipay/paymentexpress",
+    "name": "cognito/paymentexpress",
     "type": "library",
     "description": "Payment Express (DPS) driver for the Omnipay payment processing library",
     "keywords": [
@@ -16,7 +16,7 @@
         "pxpay",
         "pxpost"
     ],
-    "homepage": "https://github.com/thephpleague/omnipay-paymentexpress",
+    "homepage": "https://github.com/joshbmarshall/omnipay-paymentexpress",
     "license": "MIT",
     "authors": [
         {
